Fixed title typo.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="https://www.imdb.com/title/tt0282209/" target="_blank">Darkness Falls</a></li>
         <li><a href="https://www.imdb.com/title/tt1591095/" target="_blank">Insidious</a></li>
         <li><a href="https://www.imdb.com/title/tt0087800/" target="_blank">Nightmare on Elm Street</a></li>
-        <li><a href="https://www.imdb.com/title/tt0072271/" target="_blank">Texas Chainsaw Massacre</a></li>
+        <li><a href="https://www.imdb.com/title/tt0072271/" target="_blank">The Texas Chainsaw Massacre</a></li>
         <li><a class="watched" href="https://www.imdb.com/title/tt0077651/" target="_blank">Halloween</a></li>
         <li><a href="https://www.imdb.com/title/tt0063522/" target="_blank">Rosemary's Baby</a></li>
         <li><a href="https://www.imdb.com/title/tt5294518/" target="_blank">Eli</a></li>
