Corrected the link for The Bad Seed.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li><a href="https://www.imdb.com/title/tt0133751/" target="_blank">The Faculty</a></li>
         <li><a href="https://www.imdb.com/title/tt0056869/" target="_blank">The Birds</a></li>
         <li><a href="https://www.imdb.com/title/tt0054215/" target="_blank">Psycho</a></li>
-        <li><a href="https://www.imdb.com/title/tt0249892/" target="_blank">The Bad Seed (disambiguation needed)</a></li>
+        <li><a href="https://www.imdb.com/title/tt0048977/" target="_blank">The Bad Seed</a></li>
         <li><a href="https://www.imdb.com/title/tt1148204/" target="_blank">Orphan</a></li>
         <li><a href="https://www.imdb.com/title/tt0259153/" target="_blank">Rose Red (Mini Series)</a></li>
         <li><a href="https://www.imdb.com/title/tt0454841/" target="_blank">The Hills Have Eyes</a></li>
