--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
         <li><a class="watched" href="https://www.imdb.com/title/tt27403986/" target="_blank">Juror #2</a></li>
         <li><a href="https://www.imdb.com/title/tt0435625/" target="_blank">The Descent</a></li>
         <li><a href="https://www.imdb.com/title/tt0079714/" target="_blank">Phantasm (1979)</a></li>
+        <li><a href="https://www.imdb.com/title/tt0134847/" target="_blank">Pitch Black (2000)</a></li>
     </ul>
 
     <script>
