--- a/index.html
+++ b/index.html
@@ -125,6 +125,15 @@
         <li><a href="https://www.imdb.com/title/tt0435625/" target="_blank">The Descent</a></li>
         <li><a href="https://www.imdb.com/title/tt0079714/" target="_blank">Phantasm (1979)</a></li>
         <li><a href="https://www.imdb.com/title/tt0134847/" target="_blank">Pitch Black (2000)</a></li>
+        <li><a href="https://www.imdb.com/title/tt0110148/" target="_blank">Interview with the Vampire</a></li>
+        <li><a href="https://www.imdb.com/title/tt1188729/" target="_blank">Pandorum</a></li>
+        <li><a href="https://www.imdb.com/title/tt0435625/" target="_blank">The Descent</a></li>
+        <li><a href="https://www.imdb.com/title/tt0363547/" target="_blank">Dawn of the Dead</a></li>
+        <li><a href="https://www.imdb.com/title/tt1038988/" target="_blank">REC</a></li>
+        <li><a href="https://www.imdb.com/title/tt1139797/" target="_blank">Let the Right One In</a></li>
+        <li><a href="https://www.imdb.com/title/tt0119081/" target="_blank">Event Horizon</a></li>
+        <li><a class="watched" href="https://www.imdb.com/title/tt0078748/" target="_blank">Alien</a></li>
+        <!-- <li><a href="https://www.imdb.com/title//" target="_blank"></a></li> -->
     </ul>
 
     <script>
