Removed a couple of duplicits and updated the watched list.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <p class="oranienbaum-regular">Titles in yellow are ones we have watched.</p>
     <ul id="movie-list" class="movie-list oranienbaum-regular">
         <li><a href="https://www.imdb.com/title/tt0265459/" target="_blank">1 Hour Photo</a></li>
-        <li><a href="https://www.imdb.com/title/tt6644200/" target="_blank">A Quiet Place</a></li>
+        <li><a class="watched" href="https://www.imdb.com/title/tt6644200/" target="_blank">A Quiet Place</a></li>
+        <li><a class="watched" href="https://www.imdb.com/title/tt8332922/" target="_blank">A Quiet Place 2</a></li>
         <li><a href="https://www.imdb.com/title/tt0164334/" target="_blank">Along Came a Spider</a></li>
         <li><a href="https://www.imdb.com/title/tt0078767/" target="_blank">Amityville Horror (1979)</a></li>
         <li><a href="https://www.imdb.com/title/tt0094721/" target="_blank">Beetlejuice</a></li>
@@ -72,7 +73,7 @@
         <li><a href="https://www.imdb.com/title/tt0263488/" target="_blank">Jeepers Creepers</a></li>
         <li><a href="https://www.imdb.com/title/tt0105428/" target="_blank">Sleepwalkers (disambiguation needed)</a></li>
         <li><a href="https://www.imdb.com/title/tt4687108/" target="_blank">In the Tall Grass</a></li>
-        <li><a href="https://www.imdb.com/title/tt0114369/" target="_blank">Se7en</a></li>
+        <li><a class="watched" href="https://www.imdb.com/title/tt0114369/" target="_blank">Se7en</a></li>
         <li><a href="https://www.imdb.com/title/tt0363988/" target="_blank">Secret Window</a></li>
         <li><a href="https://www.imdb.com/title/tt0103893/" target="_blank">Buffy the Vampire Slayer</a></li>
         <li><a href="https://www.imdb.com/title/tt0088889/" target="_blank">Cat's Eye</a></li>
@@ -127,8 +128,6 @@
         <li><a href="https://www.imdb.com/title/tt0134847/" target="_blank">Pitch Black (2000)</a></li>
         <li><a href="https://www.imdb.com/title/tt0110148/" target="_blank">Interview with the Vampire</a></li>
         <li><a href="https://www.imdb.com/title/tt1188729/" target="_blank">Pandorum</a></li>
-        <li><a href="https://www.imdb.com/title/tt0435625/" target="_blank">The Descent</a></li>
-        <li><a href="https://www.imdb.com/title/tt0363547/" target="_blank">Dawn of the Dead</a></li>
         <li><a href="https://www.imdb.com/title/tt1038988/" target="_blank">REC</a></li>
         <li><a href="https://www.imdb.com/title/tt1139797/" target="_blank">Let the Right One In</a></li>
         <li><a href="https://www.imdb.com/title/tt0119081/" target="_blank">Event Horizon</a></li>
