Updated after movie night

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <li><a href="https://www.imdb.com/title/tt0088889/" target="_blank">Cat's Eye</a></li>
         <li><a class="watched" href="https://www.imdb.com/title/tt0105121/" target="_blank">The People Under the Stairs</a></li>
         <li><a href="https://www.imdb.com/title/tt0106912/" target="_blank">Fire in the Sky</a></li>
-        <li><a href="https://www.imdb.com/title/tt0105643/" target="_blank">Troll 2</a></li>
+        <li><a class="watched" href="https://www.imdb.com/title/tt0105643/" target="_blank">Troll 2</a></li>
         <li><a href="https://www.imdb.com/title/tt1843303/" target="_blank">The VelociPastor</a></li>
         <li><a href="https://www.imdb.com/title/tt0107120/" target="_blank">Hocus Pocus</a></li>
         <li><a href="https://www.imdb.com/title/tt0053925/" target="_blank">House of Usher</a></li>
@@ -132,6 +132,7 @@
         <li><a href="https://www.imdb.com/title/tt1139797/" target="_blank">Let the Right One In</a></li>
         <li><a href="https://www.imdb.com/title/tt0119081/" target="_blank">Event Horizon</a></li>
         <li><a class="watched" href="https://www.imdb.com/title/tt0078748/" target="_blank">Alien</a></li>
+        <li><a href="https://www.imdb.com/title/tt11358390/" target="_blank">Renfield (2023)</a></li>
         <!-- <li><a href="https://www.imdb.com/title//" target="_blank"></a></li> -->
     </ul>
 
