--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <li><a class="watched" href="https://www.imdb.com/title/tt27403986/" target="_blank">Juror #2</a></li>
             <li><a href="https://www.imdb.com/title/tt0435625/" target="_blank">The Descent</a></li>
             <li><a href="https://www.imdb.com/title/tt0079714/" target="_blank">Phantasm (1979)</a></li>
-            <li><a href="https://www.imdb.com/title/tt0134847/" target="_blank">Pitch Black (2000)</a></li>
+            <li><a class="watched" href="https://www.imdb.com/title/tt0134847/" target="_blank">Pitch Black (2000)</a></li>
             <li><a href="https://www.imdb.com/title/tt0110148/" target="_blank">Interview with the Vampire</a></li>
             <li><a href="https://www.imdb.com/title/tt1188729/" target="_blank">Pandorum</a></li>
             <li><a href="https://www.imdb.com/title/tt1038988/" target="_blank">REC</a></li>
@@ -137,6 +137,7 @@
             <li><a href="https://www.imdb.com/title/tt12747748/" target="_blank">Leave the World Behind</a></li>
             <li><a href="https://www.imdb.com/title/tt0310357/" target="_blank">Willard</a></li>
             <li><a href="https://www.imdb.com/title/tt0093777/" target="_blank">Prince of Darkness</a></li>
+            <li><a href="https://www.imdb.com/title/tt22939186/" target="_blank">Arcadian</a>
             <!-- <li><a href="https://www.imdb.com/title//" target="_blank"></a></li> -->
         </ul>
     </div>
