--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
             <li><a href="https://www.imdb.com/title/tt0310357/" target="_blank">Willard</a></li>
             <li><a href="https://www.imdb.com/title/tt0093777/" target="_blank">Prince of Darkness</a></li>
             <li><a href="https://www.imdb.com/title/tt22939186/" target="_blank">Arcadian</a>
-            <!-- <li><a href="https://www.imdb.com/title//" target="_blank"></a></li> -->
+            <li><a href="https://www.imdb.com/title/tt31193180/" target="_blank">Sinners</a></li>
+                <!-- <li><a href="https://www.imdb.com/title//" target="_blank"></a></li> -->
         </ul>
     </div>
 
