Added check and styling for watched movies.

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <li><a href="https://www.imdb.com/title/tt0093777/" target="_blank">Prince of Darkness</a></li>
             <li><a href="https://www.imdb.com/title/tt22939186/" target="_blank">Arcadian</a>
             <li><a href="https://www.imdb.com/title/tt31193180/" target="_blank">Sinners</a></li>
-            <li><a class="watched" href="https://www.imdb.com/title/tt6874690/" target="_blank">The Rule of Jenny Pen</a></li>
+            <li><a class="watched" href="https://www.imdb.com/title/142-16/" target="_blank">The Rule of Jenny Pen</a></li>
                 <!-- <li><a href="https://www.imdb.com/title//" target="_blank"></a></li> -->
         </ul>
     </div>
