Increased the font size of the intro text.

--- a/dynamic.html
+++ b/dynamic.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie List</title>
     <link rel="stylesheet" href="styles/mobile.css">
+    <link rel="stylesheet" href="styles/large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=New+Rocker&family=Oranienbaum&display=swap" rel="stylesheet">
@@ -12,7 +13,7 @@
 </head>
 <body>
     <h1 class="new-rocker-regular">Horror Movies</h1>
-    <p class="oranienbaum-regular">Titles in yellow are ones we have watched.</p>
+    <p id="intro-text" class="oranienbaum-regular">Titles in yellow are ones we have watched.</p>
 
     <div id="movies-grid" class="movies-grid"></div>
 
