Now shows number of movies on list.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <main>
             <h1>Movies We're Planning on Watching</h1>
             <h2>Movies with a box around them are ones that we've already watched</h2>
+            <h2 id="movie-count"></h2>
             <div id="filter-container">
                 <div class="option">
                     <label for="show-watched-movies">Show Watched Movies</label>
