--- a/bucket-list.html
+++ b/bucket-list.html
@@ -34,9 +34,9 @@
                 <div id="nav-container">
                     <div id="nav-buttons">
                         <ul class="nav-link-list">
-                            <li><a href="index.html" title="Home" class="active">Home</a></li>
-                            <li><a href="movies.html" title="Movie List">Movie List</a></li>
-                            <li><a href="request.html" title="Request Movie">Request Movie</a></li>
+                            <li><a href="index.html" title="Home">Home</a></li>
+                            <li><a href="horror-list.html" title="Horror Movies" class="active">Horror Movies</a></li>
+                            <li><a href="bucket-list.html" title="Bucket List">Bucket List</a></li>
                         </ul>
                     </div>
                 </div>
@@ -46,17 +46,11 @@
             </div> -->
         </header>
         <main>
-            <h1>Movie Night</h1>
+            <h1>Bucket List</h1>
             <div id="homepage-content">
-                <p>Welcome to our Movie Night Hub! This is the go-to spot for all things related to our 
-                    regular movie nights with friends. Here, you’ll find the dates and times of our 
-                    upcoming gatherings, a curated list of movies we’re planning to watch, and a special 
-                    section where you can <a href="request.html">suggest films</a> you’d like to see added to our lineup. Whether 
-                    you’re a longtime member or a new friend looking to join in, this site keeps 
-                    everyone connected and excited for our next cinematic adventure. Grab your popcorn 
-                    and get ready for some great nights together!</p>
+                <p>We came up with a list of fun activities that we'd like to do.</p>
                 <div id="calendar">
-                    <h2>Calendar</h2>
+                    <h2>Planned Events</h2>
                     <ul>
                         <li>6/06 - Movie Night - The Bourne Identity</li>
                         <li>6/13 - Movie Night - The Lion King</li>
@@ -66,21 +60,64 @@
                         <li>7/11 - Movie Night - Inception</li>
                     </ul>
                 </div>
-    
-                <div class="movie-highlight">
-                    <h2>Last Weeks Movie</h2>
-                    <figure>
-                      <img src="images/bourne-identity.webp" alt="last weeks movie was The Bourne Identity" loading="lazy">
-                      <figcaption class="bold-text">The Bourne Identity</figcaption>
-                    </figure>
+                <div id="bucket-list">
+                    <h2>Bucket List</h2>
+                    <div>
+                        <h3>Group activities</h3>
+                        <ul>
+                            <li>Something fun</li>
+                            <li>Something fun</li>
+                            <li>Something fun</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>Spring/Summer</h3>
+                        <ul>
+                            <li>Something fun</li>
+                            <li>Something fun</li>
+                            <li>Something fun</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>Fall/Winter</h3>
+                        <ul>
+                            <li>Something fun</li>
+                            <li>Something fun</li>
+                            <li>Something fun</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>Food</h3>
+                        <ul>
+                            <li>Something fun</li>
+                            <li>Something fun</li>
+                            <li>Something fun</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>Local Places</h3>
+                        <ul>
+                            <li>Something fun</li>
+                            <li>Something fun</li>
+                            <li>Something fun</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>Trips</h3>
+                        <ul>
+                            <li>Something fun</li>
+                            <li>Something fun</li>
+                            <li>Something fun</li>
+                        </ul>
+                    </div>
                 </div>
+                
             </div>
         </main>
 
         <footer>
             <section id="footer-contact">
                 <h3><strong>Movie Night</strong></h3>
-                <a class="video-link" href="https://youtu.be/fyHuu5mD_FI" rel="noopener noreferrer" target="_blank">Watch my code walk-through</a>
             </section>
             <section id="social-media-icons">
                 <h3 class="not-visible">Social Media Links</h3>
@@ -94,10 +131,8 @@
                 <img src="images/linkedin.svg" alt="link to linkedin" loading="lazy">
                 </a>
             </section>
-            <section id="schoo-info">
-                <h3>WDD231 Class Project</h3>
+            <section>
                 <p>Jordan Peterson</p>
-                <p id="currentyear">&copy;<span>placeholder</span></p>
                 <p id="lastModified">placeholder</p>
             </section>
         </footer>
