Lots of updates for bucket list.

--- a/bucket-list.html
+++ b/bucket-list.html
@@ -35,8 +35,8 @@
                     <div id="nav-buttons">
                         <ul class="nav-link-list">
                             <li><a href="index.html" title="Home">Home</a></li>
-                            <li><a href="horror-list.html" title="Horror Movies" class="active">Horror Movies</a></li>
-                            <li><a href="bucket-list.html" title="Bucket List">Bucket List</a></li>
+                            <li><a href="horror-list.html" title="Horror Movies">Horror Movies</a></li>
+                            <li><a href="bucket-list.html" title="Bucket List" class="active">Bucket List</a></li>
                         </ul>
                     </div>
                 </div>
@@ -47,71 +47,88 @@
         </header>
         <main>
             <h1>Bucket List</h1>
-            <div id="homepage-content">
-                <p>We came up with a list of fun activities that we'd like to do.</p>
+            <div id="bucket-list-content">
                 <div id="calendar">
                     <h2>Planned Events</h2>
                     <ul>
-                        <li>6/06 - Movie Night - The Bourne Identity</li>
-                        <li>6/13 - Movie Night - The Lion King</li>
-                        <li>6/20 - Movie Night - Toy Story</li>
-                        <li>6/27 - Movie Night - E.T. the Extra-Terrestrial</li>
-                        <li>7/04 - No Movie (Forth of July)</li>
-                        <li>7/11 - Movie Night - Inception</li>
+                        <li>Aug 12 - 16 - Caldwell Night Rodeo</li>
+                        <li>Aug 15 - 24 - Idaho State Fair</li>
+                        <li>Aug 23 - Nampa Airshow</li>
                     </ul>
                 </div>
-                <div id="bucket-list">
+                <div>
                     <h2>Bucket List</h2>
-                    <div>
-                        <h3>Group activities</h3>
-                        <ul>
-                            <li>Something fun</li>
-                            <li>Something fun</li>
-                            <li>Something fun</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h3>Spring/Summer</h3>
-                        <ul>
-                            <li>Something fun</li>
-                            <li>Something fun</li>
-                            <li>Something fun</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h3>Fall/Winter</h3>
-                        <ul>
-                            <li>Something fun</li>
-                            <li>Something fun</li>
-                            <li>Something fun</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h3>Food</h3>
-                        <ul>
-                            <li>Something fun</li>
-                            <li>Something fun</li>
-                            <li>Something fun</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h3>Local Places</h3>
-                        <ul>
-                            <li>Something fun</li>
-                            <li>Something fun</li>
-                            <li>Something fun</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h3>Trips</h3>
-                        <ul>
-                            <li>Something fun</li>
-                            <li>Something fun</li>
-                            <li>Something fun</li>
-                        </ul>
+                    <div id="bucket-list">
+                        <div>
+                            <h3>Group activities</h3>
+                                <ul>
+                                    <li><span class="checkable">YouTube Karaoke</span></li>
+                                    <li><span class="checkable">Movie Marathon</span></li>
+                                    <li><span class="checkable">PowerPoint Presentation Night</span></li>
+                                </ul>
+                        </div>
+                        <div>
+                            <h3>Spring/Summer</h3>
+                                <ul>
+                                    <li><span class="checkable">Outdoor Free Concerts</span></li>
+                                    <li><span class="checkable">Outdoor Movie Nights</span></li>
+                                    <li><span class="checkable">Drive-in Movie</span></li>
+                                    <li><span class="checkable">Float the rivers</span></li>
+                                    <li><span class="checkable checked">Boise hawks baseball</span></li>
+                                    <li><span class="checkable">Caldwell night rodeo-August</span></li>
+                                    <li><span class="checkable">Shakespeare festival</span></li>
+                                    <li><span class="checkable">Starlight theater</span></li>
+                                    <li><span class="checkable">Air show-weekend after the camp out</span></li>
+                                    <li><span class="checkable">State fair-August</span></li>
+                                    <li><span class="checkable">Jenn’s aunt’s u pick flower thing</span></li>
+                                    <li><span class="checkable">PBR</span></li>
+                                    <li><span class="checkable">Picnics</span></li>
+                                </ul>
+                        </div>
+                        <div>
+                            <h3>Fall/Winter</h3>
+                                <ul>
+                                    <li><span class="checkable">Boise football</span></li>
+                                    <li><span class="checkable">Corn maze</span></li>
+                                    <li><span class="checkable">Hot springs-fancy one is in Idaho City</span></li>
+                                    <li><span class="checkable">Hockey</span></li>
+                                    <li><span class="checkable">Soup potluck for freezer portions</span></li>
+                                </ul>
+                        </div>
+                        <div>
+                            <h3>Food</h3>
+                                <ul>
+                                    <li><span class="checkable">Pupusas</span></li>
+                                    <li><span class="checkable">Banh Mi</span></li>
+                                </ul>
+                        </div>
+                        <div>
+                            <h3>Local Places</h3>
+                                <ul>
+                                    <li><span class="checkable">Boise penitentiary</span></li>
+                                    <li><span class="checkable">Basque museum</span></li>
+                                    <li><span class="checkable">Warhawk air museum</span></li>
+                                    <li><span class="checkable">Cherry Hill Farm</span></li>
+                                    <li><span class="checkable">Lowe’s farmstead</span></li>
+                                    <li><span class="checkable">Birds of prey</span></li>
+                                    <li><span class="checkable">208 market</span></li>
+                                    <li><span class="checkable">Candlelight concert series</span></li>
+                                </ul>
+                        </div>
+                        <div>
+                            <h3>Trips</h3>
+                                <ul>
+                                    <li><span class="checkable">Silver City</span></li>
+                                    <li><span class="checkable">Leavenworth Washington</span></li>
+                                    <li><span class="checkable">Sun Valley</span></li>
+                                    <li><span class="checkable">Bruno Sand dunes- not in summer</span></li>
+                                    <li><span class="checkable">Bear Lake-best time is in August</span></li>
+                                    <li><span class="checkable">Spencer Opal Mine</span></li>
+                                    <li><span class="checkable">Shoshone Falls-best to go March- early May</span></li>
+                                </ul>
+                        </div>
                     </div>
                 </div>
-                
             </div>
         </main>
 
