--- a/horror-list.html
+++ b/horror-list.html
@@ -80,10 +80,8 @@
                 <img src="images/linkedin.svg" alt="link to linkedin" loading="lazy">
                 </a>
             </section>
-            <section id="schoo-info">
-                <h3>-</h3>
+            <section>
                 <p>Jordan Peterson</p>
-                <p id="currentyear">&copy;<span>placeholder</span></p>
                 <p id="lastModified">placeholder</p>
             </section>
         </footer>
