--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <div id="nav-container">
                     <div id="nav-buttons">
                         <ul class="nav-link-list">
-                            <li><a href="index.html" title="Home">Home</a></li>
-                            <li><a href="horror-list.html" title="Horror Movies" class="active">Horror Movies</a></li>
+                            <li><a href="index.html" title="Home" class="active">Home</a></li>
+                            <li><a href="horror-list.html" title="Horror Movies">Horror Movies</a></li>
                             <li><a href="bucket-list.html" title="Bucket List">Bucket List</a></li>
                         </ul>
                     </div>
@@ -50,28 +50,29 @@
             <div id="homepage-content">
                 <p>Welcome to our Movie Night Hub! This is the go-to spot for all things related to our 
                     regular movie nights with friends. Here, you’ll find the dates and times of our 
-                    upcoming gatherings, a curated list of movies we’re planning to watch, and a special 
-                    section where you can <a href="request.html">suggest films</a> you’d like to see added to our lineup. Whether 
+                    upcoming gatherings, and curated list of movies we’re planning to watch. We've also added
+                    a bucket list of activites we'd like to do outside of movies. Whether 
                     you’re a longtime member or a new friend looking to join in, this site keeps 
                     everyone connected and excited for our next cinematic adventure. Grab your popcorn 
                     and get ready for some great nights together!</p>
                 <div id="calendar">
                     <h2>Calendar</h2>
                     <ul>
-                        <li>6/06 - Movie Night - The Bourne Identity</li>
-                        <li>6/13 - Movie Night - The Lion King</li>
-                        <li>6/20 - Movie Night - Toy Story</li>
-                        <li>6/27 - Movie Night - E.T. the Extra-Terrestrial</li>
-                        <li>7/04 - No Movie (Forth of July)</li>
-                        <li>7/11 - Movie Night - Inception</li>
+                        <li>7/08 - Movie Night at Jordan's - We're making pizza</li>
+                        <li>Aug 12 - 16 - Caldwell Night Rodeo</li>
+                        <li>7/15 - Ward Campout - Movie Night in the Woods?</li>
+                        <li>Aug 15 - 24 - Idaho State Fair</li>
+                        <li>7/22 - Movie Night - Aubrey's</li>
+                        <li>Aug 23 - Nampa Airshow</li>
+                        <li>7/29 - Movie Night - Aubrey's</li>
                     </ul>
                 </div>
     
                 <div class="movie-highlight">
                     <h2>Last Weeks Movie</h2>
                     <figure>
-                      <img src="images/bourne-identity.webp" alt="last weeks movie was The Bourne Identity" loading="lazy">
-                      <figcaption class="bold-text">The Bourne Identity</figcaption>
+                      <img src="https://m.media-amazon.com/images/M/MV5BNzBjM2I5ZjUtNmIzNy00OGNkLWIwZDMtOTAwYWUwMzA2YjdlXkEyXkFqcGc@._V1_SX300.jpg" alt="last weeks movie was The Bourne Identity" loading="lazy">
+                      <figcaption class="bold-text">American Psycho</figcaption>
                     </figure>
                 </div>
             </div>
