--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
                 <div id="calendar">
                     <h2>Calendar</h2>
                     <ul>
-                        <li>7/08 - Movie Night at Jordan's - We're making pizza</li>
-                        <li>Aug 12 - 16 - Caldwell Night Rodeo</li>
-                        <li>7/15 - Ward Campout - Movie Night in the Woods?</li>
-                        <li>Aug 15 - 24 - Idaho State Fair</li>
-                        <li>7/22 - Movie Night - Aubrey's</li>
-                        <li>Aug 23 - Nampa Airshow</li>
-                        <li>7/29 - Movie Night - Aubrey's</li>
+                        <li>8/28 - Boise Hawks Game</li>
+                        <li>8/29 - Movie Night - Aubrey's</li>
+                        <li>8/30 - Float the Boise River/ <a href="https://meatandtaterbbq.com/">BBQ Festival</a></li>
+                        <li>9/5 - Movie Night - Aubrey's</li>
+                        <li>9/12 - Movie Night - Aubrey's</li>
+                        <li>9/19 - Movie Night - Aubrey's</li>
+                        <li>9/26 - Movie Night - Aubrey's</li>
                     </ul>
                 </div>
     
                 <div class="movie-highlight">
                     <h2>Last Weeks Movie</h2>
                     <figure>
-                      <img src="https://m.media-amazon.com/images/M/MV5BNzBjM2I5ZjUtNmIzNy00OGNkLWIwZDMtOTAwYWUwMzA2YjdlXkEyXkFqcGc@._V1_SX300.jpg" alt="last weeks movie was The Bourne Identity" loading="lazy">
-                      <figcaption class="bold-text">American Psycho</figcaption>
+                      <img src="https://m.media-amazon.com/images/M/MV5BNWQ5MDgwMzMtNWZhMy00Y2Q4LWI5NTAtODA4MDIzYTExOGQzXkEyXkFqcGc@._V1_QL75_UX190_CR0,0,190,281_.jpg" alt="last weeks movie" loading="lazy">
+                      <figcaption class="bold-text">Barbarian</figcaption>
                     </figure>
                 </div>
             </div>
