Bucket list update

--- a/bucket-list.html
+++ b/bucket-list.html
@@ -83,6 +83,8 @@
                                     <li><span class="checkable">Jenn’s aunt’s u pick flower thing</span></li>
                                     <li><span class="checkable">PBR</span></li>
                                     <li><span class="checkable">Picnics</span></li>
+                                    <li><span class="checkable">Water lantern</span></li>
+                                    <li><span class="checkable">Hot air balloon</span></li>
                                 </ul>
                         </div>
                         <div>
@@ -93,6 +95,7 @@
                                     <li><span class="checkable">Hot springs-fancy one is in Idaho City</span></li>
                                     <li><span class="checkable">Hockey</span></li>
                                     <li><span class="checkable">Soup potluck for freezer portions</span></li>
+                                    <li><span class="checkable">Cardboad race</span></li>
                                 </ul>
                         </div>
                         <div>
