update bucket list

--- a/bucket-list.html
+++ b/bucket-list.html
@@ -51,11 +51,9 @@
                 <div id="calendar">
                     <h2>Planned Events</h2>
                     <ul>
-                        <li>Aug 12 - 16 - Caldwell Night Rodeo</li>
-                        <li>Aug 15 - 24 - Idaho State Fair</li>
-                        <li>Aug 23 - Nampa Airshow</li>
+                        <li>Nothing planned yet</li>
                     </ul>
-                </div>
+                </div>Aug 12 - 16 - Caldwell Night Rodeo
                 <div>
                     <h2>Bucket List</h2>
                     <div id="bucket-list">
